--- a/web/active-downloads.html
+++ b/web/active-downloads.html
@@ -247,34 +247,32 @@
               <!-- Downloads Table -->
               <div x-show="downloads.length > 0" class="overflow-x-auto">
                 <table class="w-full">
-                  <thead class="border-b border-gray-200 bg-gray-50 dark:border-gray-800 dark:bg-gray-800/50">
+                  <thead class="border-b border-gray-200 bg-gray-100 dark:border-gray-700 dark:bg-gray-800">
                     <tr>
-                      <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-gray-400">Video</th>
-                      <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-gray-400">Status</th>
-                      <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-gray-400">Progress</th>
-                      <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider dark:text-gray-400">Actions</th>
+                      <th class="px-6 py-3 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider dark:text-gray-200">Video</th>
+                      <th class="px-6 py-3 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider dark:text-gray-200">Status</th>
+                      <th class="px-6 py-3 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider dark:text-gray-200">Progress</th>
+                      <th class="px-6 py-3 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider dark:text-gray-200">Actions</th>
                     </tr>
                   </thead>
                   <tbody class="divide-y divide-gray-200 dark:divide-gray-800">
                     <template x-for="download in downloads" :key="download.id">
-                      <tr class="hover:bg-gray-50 dark:hover:bg-gray-800/50">
+                      <tr class="hover:bg-gray-50 dark:hover:bg-gray-700/30">
                         <!-- Video Info -->
                         <td class="px-6 py-4">
                           <div class="flex items-center gap-3">
                             <img x-show="download.thumbnail_url" :src="download.thumbnail_url" :alt="download.title" class="h-12 w-20 object-cover rounded" />
                             <div class="flex-1 min-w-0">
-                              <p class="text-sm font-medium text-gray-900 truncate dark:text-white" x-text="download.title"></p>
-                              <p class="text-sm text-gray-500 dark:text-gray-400" x-text="new Date(download.upload_date).toLocaleDateString()"></p>
+                              <p class="text-sm font-medium text-gray-900 truncate dark:text-white" x-text="download.title || 'Unknown'"></p>
+                              <p class="text-sm text-gray-500 dark:text-gray-400 truncate" x-text="download.url"></p>
                             </div>
                           </div>
                         </td>
                         <!-- Status -->
                         <td class="px-6 py-4">
-                          <span class="inline-flex px-2.5 py-0.5 rounded-full text-xs font-medium" :class="{
-                            'bg-blue-100 text-blue-800 dark:bg-blue-900/20 dark:text-blue-400': download.download_status.status === 'Downloading',
-                            'bg-yellow-100 text-yellow-800 dark:bg-yellow-900/20 dark:text-yellow-400': download.download_status.status === 'Pending',
-                            'bg-red-100 text-red-800 dark:bg-red-900/20 dark:text-red-400': download.download_status.status === 'Failed'
-                          }" x-text="download.download_status.status"></span>
+                          <span x-show="download.download_status.status === 'Downloading'" class="inline-flex px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 dark:bg-blue-900/30" style="color: #1e40af;" x-bind:style="$root.classList.contains('dark') ? 'color: #93c5fd;' : 'color: #1e40af;'" x-text="download.download_status.status"></span>
+                          <span x-show="download.download_status.status === 'Pending'" class="inline-flex px-2.5 py-0.5 rounded-full text-xs font-medium bg-yellow-100 dark:bg-yellow-900/30" style="color: #92400e;" x-bind:style="$root.classList.contains('dark') ? 'color: #fcd34d;' : 'color: #92400e;'" x-text="download.download_status.status"></span>
+                          <span x-show="download.download_status.status === 'Failed'" class="inline-flex px-2.5 py-0.5 rounded-full text-xs font-medium bg-red-100 dark:bg-red-900/30" style="color: #991b1b;" x-bind:style="$root.classList.contains('dark') ? 'color: #fca5a5;' : 'color: #991b1b;'" x-text="download.download_status.status"></span>
                         </td>
                         <!-- Progress -->
                         <td class="px-6 py-4">
