--- a/web/index.html
+++ b/web/index.html
@@ -437,7 +437,7 @@
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 10l4.553-2.276A1 1 0 0121 8.618v6.764a1 1 0 01-1.447.894L15 14M5 18h8a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v8a2 2 0 002 2z"></path>
                 </svg>
                 <h3 class="mt-4 text-lg font-semibold text-gray-800 dark:text-white/90">No channels yet</h3>
-                <p class="mt-2 text-sm text-gray-500 dark:text-gray-400">Get started by adding your first YouTube channel</p>
+                <p class="mt-2 text-sm text-gray-500 dark:text-gray-400">Get started by adding your first channel</p>
                 <a href="add-channel.html" class="mt-4 inline-flex items-center px-4 py-2 bg-brand-500 text-white rounded-lg hover:bg-brand-600">
                   Add Channel
                 </a>
