Large update: Ability to add channels from config files via terminal or web, including directories of files

--- a/web/index.html
+++ b/web/index.html
@@ -206,11 +206,11 @@
                       </li>
                       <li>
                         <a
-                          href="add-channel-from-file.html"
+                          href="add-channel-from-files.html"
                           class="menu-dropdown-item group"
                           :class="page === 'addChannelFromFile' ? 'menu-dropdown-item-active' : 'menu-dropdown-item-inactive'"
                         >
-                          Add from File
+                          Add from Files
                         </a>
                       </li>
                       <li>
