--- a/web/add-channel.html
+++ b/web/add-channel.html
@@ -193,11 +193,11 @@
                       </li>
                       <li>
                         <a
-                          href="add-channel-from-file.html"
+                          href="add-channel-from-files.html"
                           class="menu-dropdown-item group"
                           :class="page === 'addChannelFromFile' ? 'menu-dropdown-item-active' : 'menu-dropdown-item-inactive'"
                         >
-                          Add from File
+                          Add from Files
                         </a>
                       </li>
                       <li>
@@ -377,7 +377,7 @@
                 </p>
                 <p class="mt-2 text-sm text-gray-600 dark:text-gray-300">
                   Already have a config file?
-                  <a href="add-channel-from-file.html" class="text-brand-500 hover:text-brand-600 font-medium">
+                  <a href="add-channel-from-files.html" class="text-brand-500 hover:text-brand-600 font-medium">
                     Load from file instead
                   </a>
                 </p>
