Added validation for per URL input values

--- a/web/add-channel-from-files.html
+++ b/web/add-channel-from-files.html
@@ -7,7 +7,7 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Add Channel from File | Tubarr</title>
+    <title>Add Channels from File | Tubarr</title>
     <link rel="icon" href="/favicon.ico">
     <link href="style.css" rel="stylesheet">
   </head>
@@ -329,6 +329,11 @@
                 </h2>
                 <p class="mt-1 text-sm text-gray-500 dark:text-gray-400">
                   Add one or multiple channels using configuration files. Choose between a single file or a directory containing multiple config files.
+                  <br>
+                  <br>
+                  Example File: <a href="/src/files/example.toml" class="text-gray-400 hover:text-gray-600 font-medium">example.toml</a>
+                  <br>
+                  <br>
                 </p>
                 <p class="mt-2 text-sm text-gray-600 dark:text-gray-300">
                   Prefer manual configuration?
