Added Metarr log view to web

--- a/web/index.html
+++ b/web/index.html
@@ -227,6 +227,40 @@
                   <!-- Dropdown Menu End -->
                 </li>
                 <!-- Menu Item Channels -->
+
+                <!-- Menu Item Logs -->
+                <li>
+                  <a
+                    href="logs.html"
+                    @click="selected = 'Logs'"
+                    class="menu-item group"
+                    :class="(selected === 'Logs') || (page === 'logs') ? 'menu-item-active' : 'menu-item-inactive'"
+                  >
+                    <svg
+                      :class="(selected === 'Logs') || (page === 'logs') ? 'menu-item-icon-active'  :'menu-item-icon-inactive'"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M3.25 5.5C3.25 4.25736 4.25736 3.25 5.5 3.25H15.3787C15.9635 3.25 16.5243 3.48243 16.9369 3.89508L20.1049 7.06307C20.5176 7.47572 20.75 8.03651 20.75 8.62132V18.5C20.75 19.7426 19.7426 20.75 18.5 20.75H5.5C4.25736 20.75 3.25 19.7426 3.25 18.5V5.5ZM5.5 4.75C5.08579 4.75 4.75 5.08579 4.75 5.5V18.5C4.75 18.9142 5.08579 19.25 5.5 19.25H18.5C18.9142 19.25 19.25 18.9142 19.25 18.5V8.62132C19.25 8.43353 19.1754 8.25332 19.0431 8.12099L15.8751 4.95301C15.7428 4.82067 15.5626 4.75 15.3787 4.75H5.5ZM7.25 10C7.25 9.58579 7.58579 9.25 8 9.25H16C16.4142 9.25 16.75 9.58579 16.75 10C16.75 10.4142 16.4142 10.75 16 10.75H8C7.58579 10.75 7.25 10.4142 7.25 10ZM8 13.25C7.58579 13.25 7.25 13.5858 7.25 14C7.25 14.4142 7.58579 14.75 8 14.75H16C16.4142 14.75 16.75 14.4142 16.75 14C16.75 13.5858 16.4142 13.25 16 13.25H8ZM7.25 18C7.25 17.5858 7.58579 17.25 8 17.25H12C12.4142 17.25 12.75 17.5858 12.75 18C12.75 18.4142 12.4142 18.75 12 18.75H8C7.58579 18.75 7.25 18.4142 7.25 18Z"
+                        fill="currentColor"
+                      />
+                    </svg>
+
+                    <span
+                      class="menu-item-text"
+                      :class="sidebarToggle ? 'xl:hidden' : ''"
+                    >
+                      Logs
+                    </span>
+                  </a>
+                </li>
+                <!-- Menu Item Logs -->
               </ul>
             </div>
           </nav>
