--- a/web/edit-channel.html
+++ b/web/edit-channel.html
@@ -719,7 +719,7 @@
                             <div>
                               <label class="block text-xs font-medium mb-1 text-gray-700 dark:text-gray-300">Video Transcode Codecs</label>
                               <textarea
-                                x-model="urlEntry.custom.metarr_video_transcode_codecs"
+                                x-model="urlEntry.custom.metarr_transcode_video_transcode_codecs"
                                 placeholder="Use global (one per line, e.g. h264:hevc or av1)"
                                 rows="2"
                                 class="w-full rounded border px-2 py-1 text-xs dark:bg-gray-900 dark:border-gray-600 dark:text-white/90 font-mono"
@@ -759,11 +759,11 @@
                           </div>
                           <div>
                             <label class="block text-xs font-medium mb-1 text-gray-700 dark:text-gray-300">Filtered Meta Operations (one per line)</label>
-                            <textarea x-model="urlEntry.custom.filtered_meta_ops" rows="2" placeholder="filter_rule|meta_op" class="w-full rounded border px-2 py-1 text-xs font-mono dark:bg-gray-900 dark:border-gray-600 dark:text-gray-300"></textarea>
+                            <textarea x-model="urlEntry.custom.metarr_filtered_meta_ops" rows="2" placeholder="filter_rule|meta_op" class="w-full rounded border px-2 py-1 text-xs font-mono dark:bg-gray-900 dark:border-gray-600 dark:text-gray-300"></textarea>
                           </div>
                           <div>
                             <label class="block text-xs font-medium mb-1 text-gray-700 dark:text-gray-300">Filtered Filename Operations (one per line)</label>
-                            <textarea x-model="urlEntry.custom.filtered_filename_ops" rows="2" placeholder="filter_rule|filename_op" class="w-full rounded border px-2 py-1 text-xs font-mono dark:bg-gray-900 dark:border-gray-600 dark:text-gray-300"></textarea>
+                            <textarea x-model="urlEntry.custom.metarr_filtered_filename_ops" rows="2" placeholder="filter_rule|filename_op" class="w-full rounded border px-2 py-1 text-xs font-mono dark:bg-gray-900 dark:border-gray-600 dark:text-gray-300"></textarea>
                           </div>
                         </div>
 
@@ -1192,7 +1192,7 @@
                           Video Transcode Codecs
                         </label>
                         <textarea
-                          x-model="formData.metarr.metarr_video_transcode_codecs"
+                          x-model="formData.metarr.metarr_transcode_video_transcode_codecs"
                           placeholder="Leave empty for copy (no transcoding)"
                           rows="3"
                           class="w-full rounded-lg border border-gray-300 bg-transparent px-4 py-2.5 text-sm text-gray-800 focus:ring-3 focus:outline-hidden dark:border-gray-700 dark:bg-gray-900 dark:text-white/90 font-mono"
@@ -1321,7 +1321,7 @@
                         </label>
                         <input
                           type="text"
-                          x-model="formData.metarr.filtered_meta_ops_file"
+                          x-model="formData.metarr.metarr_filtered_meta_ops_file"
                           placeholder="/path/to/filtered_meta_ops.txt"
                           class="w-full h-11 rounded-lg border border-gray-300 bg-transparent px-4 py-2.5 text-sm text-gray-800 placeholder:text-gray-400 focus:ring-3 focus:outline-hidden dark:border-gray-700 dark:bg-gray-900 dark:text-white/90 dark:placeholder:text-white/30"
                         />
@@ -1333,7 +1333,7 @@
                           Filtered Meta Operations
                         </label>
                         <textarea
-                          x-model="formData.metarr.filtered_meta_ops"
+                          x-model="formData.metarr.metarr_filtered_meta_ops"
                           rows="3"
                           placeholder="title:contains:cat|title:prefix:[CAT VIDEO]&#10;title:contains:dog|artist:set:Dog Channel"
                           class="w-full rounded-lg border border-gray-300 bg-transparent px-4 py-2.5 text-sm text-gray-800 placeholder:text-gray-400 focus:ring-3 focus:outline-hidden dark:border-gray-700 dark:bg-gray-900 dark:text-white/90 dark:placeholder:text-white/30 font-mono"
@@ -1379,7 +1379,7 @@
                         </label>
                         <input
                           type="text"
-                          x-model="formData.metarr.filtered_filename_ops_file"
+                          x-model="formData.metarr.metarr_filtered_filename_ops_file"
                           placeholder="/path/to/filtered_filename_ops.txt"
                           class="w-full h-11 rounded-lg border border-gray-300 bg-transparent px-4 py-2.5 text-sm text-gray-800 placeholder:text-gray-400 focus:ring-3 focus:outline-hidden dark:border-gray-700 dark:bg-gray-900 dark:text-white/90 dark:placeholder:text-white/30"
                         />
@@ -1391,7 +1391,7 @@
                           Filtered Filename Operations
                         </label>
                         <textarea
-                          x-model="formData.metarr.filtered_filename_ops"
+                          x-model="formData.metarr.metarr_filtered_filename_ops"
                           rows="3"
                           placeholder="title:contains:tutorial|prefix:[TUTORIAL] &#10;title:contains:review|prefix:[REVIEW] "
                           class="w-full rounded-lg border border-gray-300 bg-transparent px-4 py-2.5 text-sm text-gray-800 placeholder:text-gray-400 focus:ring-3 focus:outline-hidden dark:border-gray-700 dark:bg-gray-900 dark:text-white/90 dark:placeholder:text-white/30 font-mono"
@@ -1505,7 +1505,7 @@
               metarr_min_free_mem: '',
               metarr_gpu: '',
               metarr_gpu_directory: '',
-              metarr_video_transcode_codecs: '',
+              metarr_transcode_video_transcode_codecs: '',
               metarr_transcode_audio_codecs: '',
               metarr_transcode_quality: '',
               metarr_transcode_video_filter: '',
@@ -1618,7 +1618,7 @@
                       const value = urlSettings.metarr[key];
                       if (value !== null && value !== undefined) {
                         // Convert codec arrays to newline-separated strings
-                        if ((key === 'metarr_video_transcode_codecs' || key === 'metarr_transcode_audio_codecs') && Array.isArray(value)) {
+                        if ((key === 'metarr_transcode_video_transcode_codecs' || key === 'metarr_transcode_audio_codecs') && Array.isArray(value)) {
                           urlEntry.custom[key] = value.join('\n');
                         } else {
                           urlEntry.custom[key] = value;
@@ -1652,7 +1652,7 @@
                 const value = data.metarr[key];
                 if (value !== null && value !== undefined && this.formData.metarr.hasOwnProperty(key)) {
                   // Convert codec arrays to newline-separated strings
-                  if ((key === 'metarr_video_transcode_codecs' || key === 'metarr_transcode_audio_codecs') && Array.isArray(value)) {
+                  if ((key === 'metarr_transcode_video_transcode_codecs' || key === 'metarr_transcode_audio_codecs') && Array.isArray(value)) {
                     this.formData.metarr[key] = value.join('\n');
                   } else {
                     this.formData.metarr[key] = value;
@@ -1690,7 +1690,7 @@
               metarr_max_cpu_usage: null,
               metarr_min_free_mem: '',
               metarr_gpu: '',
-              metarr_video_transcode_codecs: '',
+              metarr_transcode_video_transcode_codecs: '',
               metarr_transcode_audio_codecs: '',
               metarr_transcode_quality: null,
               metarr_transcode_video_filter: '',
@@ -1848,7 +1848,7 @@
                 const metarrFields = [
                   'metarr_output_directory', 'metarr_output_ext', 'metarr_rename_style',
                   'metarr_concurrency', 'metarr_max_cpu_usage', 'metarr_min_free_mem',
-                  'metarr_gpu', 'metarr_video_transcode_codecs', 'metarr_transcode_audio_codecs',
+                  'metarr_gpu', 'metarr_transcode_video_transcode_codecs', 'metarr_transcode_audio_codecs',
                   'metarr_transcode_quality', 'metarr_transcode_video_filter',
                   'metarr_extra_ffmpeg_args', 'metarr_meta_ops', 'metarr_filename_ops',
                   'filtered_meta_ops', 'filtered_filename_ops'
