--- a/web/active-downloads.html
+++ b/web/active-downloads.html
@@ -244,7 +244,7 @@
                         <!-- Status -->
                         <td class="px-6 py-4">
                           <span x-show="download.download_status.status === 'Downloading'" class="inline-flex px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 dark:bg-blue-900/30" style="color: #1e40af;" x-bind:style="$root.classList.contains('dark') ? 'color: #93c5fd;' : 'color: #1e40af;'" x-text="download.download_status.status"></span>
-                          <span x-show="download.download_status.status === 'Pending'" class="inline-flex px-2.5 py-0.5 rounded-full text-xs font-medium bg-yellow-100 dark:bg-yellow-900/30" style="color: #92400e;" x-bind:style="$root.classList.contains('dark') ? 'color: #fcd34d;' : 'color: #92400e;'" x-text="download.download_status.status"></span>
+                          <span x-show="download.download_status.status === 'Queued'" class="inline-flex px-2.5 py-0.5 rounded-full text-xs font-medium bg-yellow-100 dark:bg-yellow-900/30" style="color: #92400e;" x-bind:style="$root.classList.contains('dark') ? 'color: #fcd34d;' : 'color: #92400e;'" x-text="download.download_status.status"></span>
                           <span x-show="download.download_status.status === 'Failed'" class="inline-flex px-2.5 py-0.5 rounded-full text-xs font-medium bg-red-100 dark:bg-red-900/30" style="color: #991b1b;" x-bind:style="$root.classList.contains('dark') ? 'color: #fca5a5;' : 'color: #991b1b;'" x-text="download.download_status.status"></span>
                         </td>
                         <!-- Progress -->
