--- a/web/channel-videos.html
+++ b/web/channel-videos.html
@@ -446,7 +446,7 @@
                             </template>
                             <template x-if="!video.finished && !video.ignored">
                               <span class="inline-flex px-2.5 py-0.5 rounded-full text-xs font-medium bg-yellow-100 text-yellow-800 dark:bg-yellow-900/20 dark:text-yellow-400">
-                                Pending
+                                Queued
                               </span>
                             </template>
                           </td>
